# ScalingUpStayingSecure

./: LICENSE  README.md
Experimentation/: Cargo.toml
Experimentation/input/: AttackParameters.ini  GridParameters.ini  ModelParameters.ini
Experimentation/src/: creator.rs  extract.rs  main.rs  parse.rs  run.rs
Experimentation/src/parse/: functions.rs  structs.rs
Model/: .gitignore  AttackParameters.ini  Cargo.toml  GridParameters.ini  ModelParameters.ini  README.md  rustfmt.toml
Model/.cargo/: config.toml
Model/doc/: search-index.js
Model/doc/implementors/core/cmp/: trait.Ord.js  trait.PartialEq.js
Model/doc/implementors/core/convert/: trait.AsRef.js
Model/doc/modelrunner/: all.html
Model/doc/scaling_up_staying_secure/: fn.run_from_config.html  fn.run_model.html
Model/doc/scaling_up_staying_secure/agent/: enum.AgentKind.html  index.html  struct.Area.html  struct.Root.html  trait.AgentTrait.html  type.HouseholdList.html  type.HouseholdRef.html  type.NetstationList.html
Model/doc/scaling_up_staying_secure/attack/: index.html  struct.Attack.html
Model/doc/scaling_up_staying_secure/grid/: enum.InfectionState.html  struct.BoundaryBand.html  struct.Grid.html  struct.PowerGeneration.html  struct.PowerState.html  struct.ReservePower.html  struct.SineParam.html  struct.VoltState.html  trait.BoundaryUnitTrait.html  trait.GridState.html
Model/doc/scaling_up_staying_secure/model/: struct.Model.html  struct.ModelParameters.html  struct.MyGraph.html
Model/doc/scaling_up_staying_secure/util/: enum.UtilError.html  fn.get_avro_schema.html  fn.init.html  fn.norm_dist.html  fn.output_graph_to_png.html  fn.write_display_string_to_file.html  index.html  macro.debug.html  macro.warn.html  sidebar-items.js  struct.Steps.html  struct.Watt.html  struct.mVolt.html  trait.StructTraitBound.html  type.BaseInt.html  type.BaseUint.html
Model/doc/src/scaling_up_staying_secure/: attack.rs.html  grid.rs.html  lib.rs.html
Model/src/: agent.rs  attack.rs  grid.rs  lib.rs  main.rs  model.rs  norayon.rs  util.rs
Model/src/agent/: area.rs  connection.rs  household.rs  netstation.rs  root.rs
Model/src/grid/: boundary.rs  gridstate.rs  gridwarning.rs  powergeneration.rs  reservepower.rs  states.rs
Model/src/grid/boundary/: band.rs  normal.rs
Model/src/grid/states/: frequency.rs  infectionstate.rs  power.rs  volt.rs
Model/src/model/: modelparameters.rs  mygraph.rs  step.rs
Model/src/util/: configparser.rs  errors.rs  logging.rs  output.rs  stats.rs  types.rs
Model/src/util/configparser/: attackparameters.rs  gridparameters.rs  modelparameters.rs
Model/src/util/output/: avro.rs  avrovalue.rs  graphviz.rs  json.rs
VerificationAndValidation/: .gitignore  Cargo.toml  rustfmt.toml
VerificationAndValidation/src/: experiments.rs  main.rs  statistics.rs  validation.rs
VerificationAndValidation/src/statistics/: anova.rs
VerificationAndValidation/src/validation/: download.rs  grid_regulation.rs  household.rs
docs/: crates.js  (+4 more)
(+164 files in other folders)
