[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
tinytemplate = "1.2.1"
tokio = { version = "1.22.0", features = ["full"] }
clap = {version = "4.0.18", features = ["suggestions","derive","color"]}
indicatif = {version = "0.17.2", features = ["rayon"]}
glob = "0.3.0"
csv = "1.1.6"
serde_json = "1.0.89"
smartgrid_iot_security = { path = "../SmartGrid_IoT_Security", version = "0.1.0" }
rayon = "1.6.1"
flate2 = "1.0.25"